# unity_2dgamedev_deliverydriver

./: .gitignore  README.md
DeliveryDriver/: build_config.yml
DeliveryDriver/Assets/BundledAssets/testbundle/: BundledSpriteObject.prefab
DeliveryDriver/Assets/Prefabs/Environment/: House 1.prefab  House 2.prefab  House 3.prefab  Rocks 1.prefab  Tree 1.prefab  Tree 2.prefab  Tree 3.prefab  Tree 4.prefab
DeliveryDriver/Assets/Scenes/: SampleScene.unity  SampleScene2.unity
DeliveryDriver/Assets/Scripts/: Driver.cs
DeliveryDriver/Aws/: build_uploader_exec.bat  connect_to_s3.sh  pyproject.toml  run_upload.bat
DeliveryDriver/BuildAutomationTools/: .gitignore  .pylintrc  build_and_upload_player_to_aws.bat  build_log  build_python_scripts_win.bat.bat  pyproject.toml  run_build_python_scripts_win.bat  run_python_setup_macos.sh  run_upload_assets_to_aws.bat  run_upload_assets_to_aws.sh  run_upload_player_to_aws.bat  run_upload_player_to_aws.sh  upload_assets_to_aws.bat
DeliveryDriver/BuildAutomationTools/bokken/: connect_to_vm.bat  macos_vm.yml  win_vm.yml
DeliveryDriver/BuildAutomationTools/src/build_automation_tools/entry_points/: upload_to_aws.py  zip_folder.py
DeliveryDriver/BuildAutomationTools/src/build_automation_tools/logging_configuration/: logging.py
DeliveryDriver/BuildAutomationTools/src/build_automation_tools/system/: paths_resolutions.py
DeliveryDriver/BundledAssetsUploader/: build_uploader_exec.bat  pyproject.toml  run_upload.bat  run_upload.sh
DeliveryDriver/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+22 files in other folders)
