[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Build Automation Tools"
version = "1.0.0"
description = "Upload items to AWS, zip files, help with UCB"
authors = ["Milan Assuied <Milan.assuied@unity3d.com>"]
packages = [
    { include = "build_automation_tools", from = "src" },
]

[tool.poetry.scripts]
upload_to_aws = 'aws_upload.entry_points.upload_to_aws:main'
zip_folder = 'aws_upload.entry_points.zip_folder:main'

[tool.poetry.dependencies]
python = "<3.13,>=3.7"
pywin32 = {version = "^303", platform = "win32"}
boto3 = "1.28.50"
coloredlogs = "15.0.1"

[tool.poetry.dev-dependencies]
pyinstaller = "5.13.2"
more_itertools = "*"
pylint = "3.0.0a4"
pytest = "*"
pytest-cov = "*"
pytest-lazy-fixture = "*"
pytest-mock = "*"
callee = "^0.3.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -v --junitxml=results.xml"
testpaths = [
    "tests",
]
junit_logging = "all"